# ibn_attitude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.pc  README.md  config.toml  config.yml  docker-compose-arm.yml  docker-compose-pituah.yml  docker-compose.yml  drone_rpy_to_ros.py  github_token.txt  ibn_token_secret  package.xml  pyproject.toml  setup.py
docker/: Dockerfile  Dockerfile.arm  Dockerfile.pc  entrypoint.sh  entrypoint_arm.sh  entrypoint_gps.sh  entrypoint_pixhawk.sh
docs/: system_diagram.puml  test_plan.md
g_tools/hooks/: check_private_docstrings.py
nodes/: pixhawk_telemetry.py
src/ibn_attitude/launch/: pixhawk_bridge.launch.py
src/ibn_attitude/mavlink/: client.py  translator.py
src/ibn_attitude/nodes/: gps_injection.py  pixhawk_telemetry.py
src/ibn_mavlink/: package.xml  setup.cfg  setup.py
src/ibn_mavlink/ibn_mavlink/config/: gps_injection.yaml  pixhawk_bridge.yaml
src/ibn_mavlink/ibn_mavlink/gps_injection/: converter.py  node.py  sender.py
src/ibn_mavlink/ibn_mavlink/mavlink/: __init__.py  client.py
src/ibn_mavlink/ibn_mavlink/pixhawk_bridge/: client.py  node.py  translator.py
src/ibn_mavlink/ibn_mavlink/utils/: logger_setup.py
src/ibn_mavlink/launch/: __init__.py  pixhawk_bridge.launch.py  pixhawk_bridge_launch.py
src/ibn_mavlink/resource/: ibn_mavlink
src/ibn_mavlink/test/: conftest.py  test_client.py  test_converter.py  test_gps_injection_node.py  test_pixhawk_bridge_node.py  test_translator.py
src/ibn_mavlink/test/resources/: invalid_config.yaml  valid_config.yaml
