<?xml version="1.0"?>
<package format="3">
  <name>ibn_attitude</name>
  <version>0.0.0</version>
  <description>IBN attitude system</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>